[project]
name = "myproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Jay Krishnan",email = "jkrishna@student.42heilbronn.de"}
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "numpy>=2.2.6",
    "matplotlib>=3.10.9",
    "requests>=2.34.2",
    "python-dotenv"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
